grammar.txt
<sourceFile> 
    ::= <functionDecl>* EOF

<functionDecl> 
    ::= 'fn' <identifier> <parameterList> ':' <type> <block>

<parameterList>
    ::= '(' (<paramDecl> (',' <paramDecl>)*)? ')'

<paramDecl>
    ::= <identifier> ':' <type>

<block>
    ::= '{' (<expr> ';')* '}'

Precedence  Type            Symbols
Highest     Multiplicative  *, /    
Lowest      Additive        +, -    

<expr>
    ::= <additiveExpression> (('+' | '-') <additiveExpression>)*

<additiveExpression>
    ::= <multiplicativeExpression> (('*' | '/') <multiplicativeExpression>)*

<multiplicativeExpression>
    ::= <primaryExpr>

<primaryExpr>
    ::= <numberLiteral>
    |   <declRefExpr>
    |   <callExpr>
    |   '(' <expr> ')'

<numberLiteral>
    ::= <number>

<declRefExpr>
    ::= <identifier>

<callExpr>
    ::= <declRefExpr> <argumentList>

<argumentList>
    ::= '(' (<expr> (',' <expr>)*)? ')'

<type>
    ::= 'number'
    |   'void'
    |   <identifier>

<identifier>
    ::= ('a'..'z' | 'A'..'Z')+ ('a'..'z' | 'A'..'Z' | '0'..'9')*

<number>
    ::= ('0'..'9')+ '.' ('0'..'9')+
