src/parser.cpp
#include <cassert>

#include "parser.h"
#include "utils.h"

#define expectOrReturn(tok, err)                                               \
  if (nextToken.kind != tok)                                                   \
    return err.report(reporter);

namespace yl {
int Parser::getTokPrecedence(TokenKind tok) {
  switch (tok) {
  case TokenKind::Asterisk:
  case TokenKind::Slash:
    return 6;
  case TokenKind::Plus:
  case TokenKind::Minus:
    return 5;
  case TokenKind::Lt:
  case TokenKind::Gt:
    return 4;
  case TokenKind::EqualEqual:
    return 3;
  case TokenKind::AmpAmp:
    return 2;
  case TokenKind::PipePipe:
    return 1;
  default:
    return -1;
  }
}

// Synchronization points:
// - top level tokens
// - end of the current block
// - ';'
void Parser::synchronize() {
  incompleteAST = true;

  int braces = 0;
  while (true) {
    TokenKind kind = nextToken.kind;

    if (kind == TokenKind::Lbrace) {
      ++braces;
    } else if (kind == TokenKind::Rbrace) {
      if (braces == 0)
        break;

      if (braces == 1) {
        eatNextToken(); // eat '}'
        break;
      }

      --braces;
    } else if (kind == TokenKind::Semi && braces == 0) {
      eatNextToken(); // eat ';'
      break;
    } else if (topLevelTokens.count(kind))
      break;

    eatNextToken();
  }
}

// <fieldDecl>
//  ::= <identifier> ':' <type>
std::unique_ptr<ast::FieldDecl> Parser::parseFieldDecl() {
  expectOrReturn(
      TokenKind::Identifier,
      err::expected().at(nextToken.location).with("field declaration"));

  SourceLocation location = nextToken.location;
  assert(nextToken.value && "identifier token without value");

  std::string identifier = *nextToken.value;
  eatNextToken(); // eat identifier

  expectOrReturn(TokenKind::Colon,
                 err::expected().at(nextToken.location).with("':'"));
  eatNextToken(); // eat :

  varOrReturn(type, parseType());

  return std::make_unique<ast::FieldDecl>(location, std::move(identifier),
                                          std::move(type));
};

// <typeParamList>
//  ::= '<' <typeParamDecl> (',' <typeParamDecl>)* ','? '>'
std::unique_ptr<std::vector<std::unique_ptr<ast::TypeParamDecl>>>
Parser::parseTypeParamList() {
  if (nextToken.kind != TokenKind::Lt)
    return std::make_unique<std::vector<std::unique_ptr<ast::TypeParamDecl>>>();

  expectOrReturn(TokenKind::Lt,
                 err::expected().at(nextToken.location).with("'<'"));
  eatNextToken(); // eat '<'

  varOrReturn(list, parseListWithTrailingComma<ast::TypeParamDecl>(
                        &Parser::parseTypeParamDecl, TokenKind::Gt));

  if (list->empty())
    return err::expected()
        .at(nextToken.location)
        .with("type parameter declaration")
        .report(reporter);

  expectOrReturn(TokenKind::Gt, err::expected3()
                                    .at(nextToken.location)
                                    .with("','")
                                    .with("':'")
                                    .with("'>'"));
  eatNextToken(); // eat ',', ':' or '>'

  return list;
}

// <typeList>
//  ::= '<' <type> (',' <type>)* ','? '>'
std::unique_ptr<std::vector<std::unique_ptr<ast::Type>>>
Parser::parseTypeList() {
  expectOrReturn(TokenKind::Lt,
                 err::expected().at(nextToken.location).with("'<'"));
  eatNextToken(); // eat '<'

  varOrReturn(list, parseListWithTrailingComma<ast::Type>(&Parser::parseType,
                                                          TokenKind::Gt));

  if (list->empty())
    return err::expected().at(nextToken.location).with("type").report(reporter);

  expectOrReturn(
      TokenKind::Gt,
      err::expected2().at(nextToken.location).with("','").with("'>'"));
  eatNextToken(); // eat ',' or '>'

  return list;
}

// <typeParamDecl>
//  ::= <identifier> <traitConformanceDecl>?
std::unique_ptr<ast::TypeParamDecl> Parser::parseTypeParamDecl() {
  expectOrReturn(TokenKind::Identifier,
                 err::expected()
                     .at(nextToken.location)
                     .with("type parameter declaration"));

  SourceLocation location = nextToken.location;
  assert(nextToken.value && "identifier token without value");

  std::string identifier = *nextToken.value;
  eatNextToken(); // eat identifier

  std::unique_ptr<ast::TraitConformance> conformance;
  if (nextToken.kind == TokenKind::Colon) {
    conformance = parseTraitConformance();
    if (!conformance)
      return nullptr;
  }

  return std::make_unique<ast::TypeParamDecl>(location, std::move(identifier),
                                              std::move(conformance));
}

// <structDecl>
//  ::= 'struct' <identifier> <typeParamList>? '{' <fieldList>? '}'
//
// <fieldList>
//  ::= <fieldDecl> (',' <fieldDecl>)* ','?
std::unique_ptr<ast::StructDecl> Parser::parseStructDecl() {
  eatNextToken(); // eat struct

  SourceLocation location = nextToken.location;
  expectOrReturn(TokenKind::Identifier,
                 err::expected().at(nextToken.location).with("identifier"));

  assert(nextToken.value && "identifier token without value");
  std::string structIdentifier = *nextToken.value;
  eatNextToken(); // eat identifier

  varOrReturn(typeParams, parseTypeParamList());

  expectOrReturn(TokenKind::Lbrace,
                 err::expected().at(nextToken.location).with("'{'"));
  eatNextToken(); // eat '{'

  varOrReturn(fields, parseListWithTrailingComma<ast::FieldDecl>(
                          &Parser::parseFieldDecl, TokenKind::Rbrace));

  expectOrReturn(TokenKind::Rbrace,
                 err::expected().at(nextToken.location).with("'}'"));
  eatNextToken(); // eat '}'

  return std::make_unique<ast::StructDecl>(
      location, structIdentifier, std::move(*typeParams), std::move(*fields));
}

// <traitDecl>
//     ::= 'trait' <identifier> <typeParamList>? <traitConformanceDecl>? '{'
//     <traitFunctionDecl>* '}'

// <traitFunctionDecl>
//     ::= <functionHeader> (';' | <block>)
std::unique_ptr<ast::TraitDecl> Parser::parseTraitDecl() {
  eatNextToken(); // eat 'trait'

  SourceLocation location = nextToken.location;
  expectOrReturn(TokenKind::Identifier,
                 err::expected().at(nextToken.location).with("identifier"));

  assert(nextToken.value && "identifier token without value");
  std::string identifier = *nextToken.value;
  eatNextToken(); // eat identifier

  varOrReturn(typeParamList, parseTypeParamList());

  std::unique_ptr<ast::TraitConformance> conformance;
  if (nextToken.kind == TokenKind::Colon) {
    conformance = parseTraitConformance();
    if (!conformance)
      return nullptr;
  }

  expectOrReturn(TokenKind::Lbrace, err::expected2()
                                        .at(nextToken.location)
                                        .with(conformance ? "'&'" : "':'")
                                        .with("'{'"));
  eatNextToken(); // eat '{'

  std::vector<std::unique_ptr<ast::FunctionDecl>> memberFunctions;

  while (nextToken.kind == TokenKind::KwFn) {
    if (auto fn = withRestrictions<ast::FunctionDecl>(
            FunctionWithoutBodyAllowed, &Parser::parseFunctionDecl)) {
      memberFunctions.emplace_back(std::move(fn));
      continue;
    }

    synchronize();
  }

  expectOrReturn(
      TokenKind::Rbrace,
      err::expected2().at(nextToken.location).with("'fn'").with("'}'"));
  eatNextToken(); // eat '}'

  return std::make_unique<ast::TraitDecl>(
      location, identifier, std::move(conformance), std::move(*typeParamList),
      std::move(memberFunctions));
}

// <typeExtension>
//  ::= 'extension' <typeParamList> <type> ':' <userDefinedType>? '{'
//      <functionDecl>* '}'
std::unique_ptr<ast::TypeExtension> Parser::parseTypeExtension() {
  expectOrReturn(TokenKind::KwExtension,
                 err::expected().at(nextToken.location).with("'extension'"));
  eatNextToken(); // eat 'extension'

  varOrReturn(typeParamList, parseTypeParamList());

  varOrReturn(type, parseType());

  SourceLocation loc = nextToken.location;
  std::unique_ptr<ast::UserDefinedType> trait;

  if (nextToken.kind == TokenKind::Colon) {
    eatNextToken(); // eat ':'

    trait = parseUserDefinedType();
    if (!trait)
      return nullptr;
  }

  expectOrReturn(TokenKind::Lbrace,
                 err::expected().at(nextToken.location).with("'{'"));
  eatNextToken(); // eat '{'

  std::vector<std::unique_ptr<ast::FunctionDecl>> functions;

  while (nextToken.kind == TokenKind::KwFn) {
    if (auto fnDecl = parseFunctionDecl())
      functions.emplace_back(std::move(fnDecl));
    else
      synchronize();
  }

  expectOrReturn(
      TokenKind::Rbrace,
      err::expected2().at(nextToken.location).with("'fn'").with("'}'"));
  eatNextToken(); // eat '}'

  return std::make_unique<ast::TypeExtension>(loc, std::move(*typeParamList),
                                              std::move(type), std::move(trait),
                                              std::move(functions));
}

// <functionDecl>
//  ::= <functionHeader> <block>

// <functionHeader>
//  ::= 'fn' <identifier> <typeParamList>? <parameterList> ':' <type>?
//
// <parameterList>
//  ::= '(' (<paramDecl> (',' <paramDecl>)* ','?)? ')'
std::unique_ptr<ast::FunctionDecl> Parser::parseFunctionDecl() {
  expectOrReturn(TokenKind::KwFn,
                 err::expected().at(nextToken.location).with("'fn'"));
  eatNextToken(); // eat fn

  return parseFunctionSignature();
}

std::unique_ptr<ast::FunctionDecl> Parser::parseFunctionSignature() {
  SourceLocation location = nextToken.location;
  expectOrReturn(TokenKind::Identifier,
                 err::expected().at(nextToken.location).with("identifier"));

  assert(nextToken.value && "identifier token without value");
  std::string functionIdentifier = *nextToken.value;
  eatNextToken(); // eat identifier

  varOrReturn(typeParamList, parseTypeParamList());

  expectOrReturn(TokenKind::Lpar,
                 err::expected().at(nextToken.location).with("'('"));
  eatNextToken(); // eat '('

  varOrReturn(parameterList, parseListWithTrailingComma<ast::ParamDecl>(
                                 &Parser::parseParamDecl, TokenKind::Rpar));

  expectOrReturn(TokenKind::Rpar,
                 err::expected().at(nextToken.location).with("')'"));
  eatNextToken(); // eat ')'

  TokenKind nextTokenKind = nextToken.kind;
  if (nextTokenKind != TokenKind::Colon && nextTokenKind != TokenKind::Semi &&
      nextTokenKind != TokenKind::Lbrace)
    return err::expected3()
        .at(nextToken.location)
        .with("':'")
        .with("';'")
        .with("'{'")
        .report(reporter);

  std::unique_ptr<ast::Type> type;
  if (nextTokenKind == TokenKind::Colon) {
    eatNextToken(); // eat ':'

    type = parseType();
    if (!type)
      return nullptr;
  }

  std::unique_ptr<ast::Block> block = nullptr;
  if (nextToken.kind == TokenKind::Lbrace) {
    varOrReturn(b, parseBlock());
    block = std::move(b);
  } else if (restrictions & FunctionWithoutBodyAllowed) {
    expectOrReturn(
        TokenKind::Semi,
        err::expected2().at(nextToken.location).with("';'").with("'{'"));
    eatNextToken(); // eat ';'
  } else {
    return err::expectedBody()
        .at(nextToken.location)
        .with("function")
        .report(reporter);
  }

  return std::make_unique<ast::FunctionDecl>(
      location, functionIdentifier, std::move(type), std::move(*typeParamList),
      std::move(*parameterList), std::move(block));
}

// <paramDecl>
//  ::= 'mut'? <identifier> ':' <argumentType>
std::unique_ptr<ast::ParamDecl> Parser::parseParamDecl() {
  bool isMut = nextToken.kind == TokenKind::KwMut;
  if (isMut)
    eatNextToken(); // eat 'mut'

  SourceLocation location = nextToken.location;
  expectOrReturn(
      TokenKind::Identifier,
      err::expected().at(nextToken.location).with("parameter declaration"));
  assert(nextToken.value && "identifier token without value");

  std::string identifier = *nextToken.value;
  eatNextToken(); // eat identifier

  std::unique_ptr<ast::ArgumentType> type;
  if (nextToken.kind == TokenKind::Colon) {
    eatNextToken(); // eat :

    type = parseArgumentType();
    if (!type)
      return nullptr;
  }

  if (!type && !(restrictions & ParamWithoutTypeAllowed))
    return err::expected().at(nextToken.location).with("':'").report(reporter);

  return std::make_unique<ast::ParamDecl>(location, std::move(identifier),
                                          std::move(type), isMut);
}

// <varDecl>
//  ::= <identifier> (':' <type>)? ('=' <expr>)?
std::unique_ptr<ast::VarDecl> Parser::parseVarDecl(bool isLet) {
  SourceLocation location = nextToken.location;

  assert(nextToken.value && "identifier token without value");

  std::string identifier = *nextToken.value;
  eatNextToken(); // eat identifier

  std::unique_ptr<ast::Type> type;
  if (nextToken.kind == TokenKind::Colon) {
    eatNextToken(); // eat ':'

    type = parseType();
    if (!type)
      return nullptr;
  }

  if (nextToken.kind != TokenKind::Equal)
    return std::make_unique<ast::VarDecl>(location, identifier, std::move(type),
                                          !isLet);
  eatNextToken(); // eat '='

  varOrReturn(initializer, parseExpr());

  return std::make_unique<ast::VarDecl>(location, identifier, std::move(type),
                                        !isLet, std::move(initializer));
}

// <block>
//  ::= '{' <statement>* '}'
std::unique_ptr<ast::Block> Parser::parseBlock() {
  SourceLocation location = nextToken.location;
  eatNextToken(); // eat '{'

  std::vector<std::unique_ptr<ast::Stmt>> expressions;
  while (true) {
    if (nextToken.kind == TokenKind::Rbrace)
      break;

    if (topLevelTokens.count(nextToken.kind))
      return err::expectedAtEnd()
          .at(nextToken.location)
          .with("'}'")
          .with("block")
          .report(reporter);

    std::unique_ptr<ast::Stmt> stmt = parseStmt();
    if (!stmt) {
      synchronize();
      continue;
    }

    expressions.emplace_back(std::move(stmt));
  }

  eatNextToken(); // eat '}'

  return std::make_unique<ast::Block>(location, std::move(expressions));
}

// <ifStatement>
//  ::= 'if' <expr> <block> ('else' (<ifStatement> | <block>))?
std::unique_ptr<ast::IfStmt> Parser::parseIfStmt() {
  SourceLocation location = nextToken.location;
  eatNextToken(); // eat 'if'

  varOrReturn(condition, withRestrictions<ast::Expr>(StructNotAllowed,
                                                     &Parser::parseExpr));

  expectOrReturn(TokenKind::Lbrace,
                 err::expectedBody().at(nextToken.location).with("'if'"));

  varOrReturn(trueBlock, parseBlock());

  if (nextToken.kind != TokenKind::KwElse)
    return std::make_unique<ast::IfStmt>(location, std::move(condition),
                                         std::move(trueBlock));
  eatNextToken(); // eat 'else'

  std::unique_ptr<ast::Block> falseBlock;
  if (nextToken.kind == TokenKind::KwIf) {
    varOrReturn(elseIf, parseIfStmt());

    SourceLocation loc = elseIf->location;
    std::vector<std::unique_ptr<ast::Stmt>> stmts;
    stmts.emplace_back(std::move(elseIf));

    falseBlock = std::make_unique<ast::Block>(loc, std::move(stmts));
  } else {
    expectOrReturn(TokenKind::Lbrace,
                   err::expectedBody().at(nextToken.location).with("'else'"));
    falseBlock = parseBlock();
  }

  if (!falseBlock)
    return nullptr;

  return std::make_unique<ast::IfStmt>(location, std::move(condition),
                                       std::move(trueBlock),
                                       std::move(falseBlock));
}

// <whileStatement>
//  ::= 'while' <expr> <block>
std::unique_ptr<ast::WhileStmt> Parser::parseWhileStmt() {
  SourceLocation location = nextToken.location;
  eatNextToken(); // eat 'while'

  varOrReturn(
      cond, withRestrictions<ast::Expr>(StructNotAllowed, &Parser::parseExpr));

  expectOrReturn(TokenKind::Lbrace,
                 err::expectedBody().at(nextToken.location).with("'while'"));
  varOrReturn(body, parseBlock());

  return std::make_unique<ast::WhileStmt>(location, std::move(cond),
                                          std::move(body));
}

// <declStmt>
//  ::= ('let'|'mut') <varDecl>  ';'
std::unique_ptr<ast::DeclStmt> Parser::parseDeclStmt() {
  Token tok = nextToken;
  eatNextToken(); // eat 'let' | 'mut'

  expectOrReturn(TokenKind::Identifier,
                 err::expected().at(nextToken.location).with("identifier"));
  varOrReturn(varDecl, parseVarDecl(tok.kind == TokenKind::KwLet));

  expectOrReturn(TokenKind::Semi, err::expectedAtEnd()
                                      .at(nextToken.location)
                                      .with("';'")
                                      .with("declaration"));
  eatNextToken(); // eat ';'

  return std::make_unique<ast::DeclStmt>(tok.location, std::move(varDecl));
}

// <returnStmt>
//  ::= 'return' <expr> ';'
std::unique_ptr<ast::ReturnStmt> Parser::parseReturnStmt() {
  SourceLocation location = nextToken.location;
  eatNextToken(); // eat 'return'

  std::unique_ptr<ast::Expr> expr;
  if (nextToken.kind != TokenKind::Semi) {
    expr = parseExpr();
    if (!expr)
      return nullptr;
  }

  expectOrReturn(TokenKind::Semi, err::expectedAtEnd()
                                      .at(nextToken.location)
                                      .with("';'")
                                      .with("return statement"));
  eatNextToken(); // eat ';'

  return std::make_unique<ast::ReturnStmt>(location, std::move(expr));
}

// <fieldInit>
//  ::= <identifier> ':' <expr>
std::unique_ptr<ast::FieldInitStmt> Parser::parseFieldInitStmt() {
  expectOrReturn(
      TokenKind::Identifier,
      err::expected().at(nextToken.location).with("field initialization"));

  SourceLocation location = nextToken.location;
  assert(nextToken.value && "identifier token without value");

  std::string identifier = *nextToken.value;
  eatNextToken(); // eat identifier

  expectOrReturn(TokenKind::Colon,
                 err::expected().at(nextToken.location).with("':'"));
  eatNextToken(); // eat ':'

  varOrReturn(init, parseExpr());

  return std::make_unique<ast::FieldInitStmt>(location, std::move(identifier),
                                              std::move(init));
}

// <statement>
//  ::= <expr> ';'
//  |   <returnStmt>
//  |   <ifStatement>
//  |   <whileStatement>
//  |   <assignment>
//  |   <declStmt>
std::unique_ptr<ast::Stmt> Parser::parseStmt() {
  if (nextToken.kind == TokenKind::KwIf)
    return parseIfStmt();

  if (nextToken.kind == TokenKind::KwWhile)
    return parseWhileStmt();

  if (nextToken.kind == TokenKind::KwReturn)
    return parseReturnStmt();

  if (nextToken.kind == TokenKind::KwLet || nextToken.kind == TokenKind::KwMut)
    return parseDeclStmt();

  return parseAssignmentOrExpr();
}

// <statement>
//  ::= <expr> ';'
//  |   ...
//
// <assignment>
//  ::= <expr> '=' <expr> ';'
std::unique_ptr<ast::Stmt> Parser::parseAssignmentOrExpr() {
  varOrReturn(lhs, parseExpr());

  if (nextToken.kind != TokenKind::Equal) {
    expectOrReturn(TokenKind::Semi, err::expectedAtEnd()
                                        .at(nextToken.location)
                                        .with("';'")
                                        .with("expression"));
    eatNextToken(); // eat ';'

    return lhs;
  }

  SourceLocation location = nextToken.location;
  eatNextToken(); // eat '='

  varOrReturn(rhs, parseExpr());

  expectOrReturn(TokenKind::Semi, err::expectedAtEnd()
                                      .at(nextToken.location)
                                      .with("';'")
                                      .with("assignment"));
  eatNextToken(); // eat ';'

  return std::make_unique<ast::Assignment>(location, std::move(lhs),
                                           std::move(rhs));
}

std::unique_ptr<ast::Expr> Parser::parseExpr() {
  varOrReturn(lhs, parsePrefixExpr());
  return parseExprRHS(std::move(lhs), 0);
}

std::unique_ptr<ast::Expr> Parser::parseExprRHS(std::unique_ptr<ast::Expr> lhs,
                                                int precedence) {
  while (true) {
    Token op = nextToken;
    int curOpPrec = getTokPrecedence(op.kind);

    if (curOpPrec < precedence)
      return lhs;
    eatNextToken(); // eat operator

    varOrReturn(rhs, parsePrefixExpr());

    if (curOpPrec < getTokPrecedence(nextToken.kind)) {
      rhs = parseExprRHS(std::move(rhs), curOpPrec + 1);
      if (!rhs)
        return nullptr;
    }

    lhs = std::make_unique<ast::BinaryOperator>(op.location, std::move(lhs),
                                                std::move(rhs), op.kind);
  }
}

// <prefixExpression>
//  ::= ('!' | '-' | '*' )* <postfixExpression>
std::unique_ptr<ast::Expr> Parser::parsePrefixExpr() {
  Token tok = nextToken;

  if (tok.kind != TokenKind::Excl && tok.kind != TokenKind::Minus &&
      tok.kind != TokenKind::Asterisk)
    return parsePostfixExpr();
  eatNextToken(); // eat '!', '-', or '*'

  varOrReturn(rhs, parsePrefixExpr());

  return std::make_unique<ast::UnaryOperator>(tok.location, std::move(rhs),
                                              tok.kind);
}

// <postfixExpression>
//  ::= <primaryExpression> (<argumentList> | <memberExpr>)*
//
// <argumentList>
//  ::= '(' (<expr> (',' <expr>)* ','?)? ')'
//
// <memberExpr>
//  ::= '.' <declRefExpr>
std::unique_ptr<ast::Expr> Parser::parsePostfixExpr() {
  varOrReturn(expr, parsePrimary());

  while (true) {
    SourceLocation location = nextToken.location;

    if (nextToken.kind == TokenKind::Lpar) {

      expectOrReturn(TokenKind::Lpar,
                     err::expected().at(nextToken.location).with("'('"));
      eatNextToken(); // eat '('

      varOrReturn(argumentList, parseListWithTrailingComma<ast::Expr>(
                                    &Parser::parseExpr, TokenKind::Rpar));

      expectOrReturn(TokenKind::Rpar,
                     err::expected().at(nextToken.location).with("')'"));
      eatNextToken(); // eat ')'

      expr = std::make_unique<ast::CallExpr>(location, std::move(expr),
                                             std::move(*argumentList));
      continue;
    }

    if (nextToken.kind == TokenKind::Dot) {
      eatNextToken(); // eat '.'

      varOrReturn(member, parseDeclRefExpr());

      expr = std::make_unique<ast::MemberExpr>(location, std::move(expr),
                                               std::move(member));
      continue;
    }

    break;
  }

  return expr;
}

// <primaryExpression>
//  ::= 'unit'
//  |   <numberLiteral>
//  |   <boolLiteral>
//  |   <gcExpr>
//  |   <lambda>
//  |   <pathExpr> <fieldInitList>?
//  |   '(' <expr> ')'
//
// <fieldInitList>
//  ::= '{' (<fieldInit> (',' <fieldInit>)* ','?)? '}'
std::unique_ptr<ast::Expr> Parser::parsePrimary() {
  SourceLocation location = nextToken.location;

  if (nextToken.kind == TokenKind::Lpar) {
    eatNextToken(); // eat '('

    varOrReturn(expr, withNoRestrictions<ast::Expr>(&Parser::parseExpr));

    expectOrReturn(TokenKind::Rpar,
                   err::expected().at(nextToken.location).with("')'"));
    eatNextToken(); // eat ')'

    return std::make_unique<ast::GroupingExpr>(location, std::move(expr));
  }

  if (nextToken.kind == TokenKind::KwUnit) {
    auto literal = std::make_unique<ast::UnitLiteral>(location);
    eatNextToken(); // eat unit
    return literal;
  }

  if (nextToken.kind == TokenKind::Number) {
    auto literal =
        std::make_unique<ast::NumberLiteral>(location, *nextToken.value);
    eatNextToken(); // eat number
    return literal;
  }

  if (nextToken.kind == TokenKind::KwTrue ||
      nextToken.kind == TokenKind::KwFalse) {
    auto literal =
        std::make_unique<ast::BoolLiteral>(location, *nextToken.value);
    eatNextToken(); // eat 'true' | 'false'
    return literal;
  }

  if (nextToken.kind == TokenKind::KwGC)
    return parseGCExpr();

  if (nextToken.kind == TokenKind::Arrow)
    return parseLambdaExpr();

  if (nextToken.kind == TokenKind::Identifier ||
      nextToken.kind == TokenKind::KwSelf || nextToken.kind == TokenKind::At) {
    varOrReturn(path, parsePathExpr());
    if (restrictions & StructNotAllowed || nextToken.kind != TokenKind::Lbrace)
      return path;

    location = nextToken.location;

    expectOrReturn(TokenKind::Lbrace,
                   err::expected().at(nextToken.location).with("'{'"));
    eatNextToken(); // eat '{'

    auto fieldInitList = parseListWithTrailingComma<ast::FieldInitStmt>(
        &Parser::parseFieldInitStmt, TokenKind::Rbrace);
    if (!fieldInitList)
      return nullptr;

    expectOrReturn(
        TokenKind::Rbrace,
        err::expected2().at(nextToken.location).with("','").with("'}'"));
    eatNextToken(); // eat ',' or '}'

    return std::make_unique<ast::StructInstantiationExpr>(
        location, std::move(path), std::move(*fieldInitList));
  }

  return err::expected()
      .at(nextToken.location)
      .with("expression")
      .report(reporter);
}

// <typeSpecifier>
//  ::= '@' '<' <type> ':' <userDefinedType> '>'
std::unique_ptr<ast::TypeSpecifier> Parser::parseTypeSpecifier() {
  SourceLocation location = nextToken.location;
  eatNextToken(); // eat '@'

  expectOrReturn(TokenKind::Lt,
                 err::expected().at(nextToken.location).with("'<'"));
  eatNextToken(); // eat '<'

  varOrReturn(type, parseType());

  std::unique_ptr<ast::UserDefinedType> trait;
  if (nextToken.kind == TokenKind::Colon) {
    eatNextToken(); // eat ':'

    trait = parseUserDefinedType();
    if (!trait)
      return nullptr;
  }

  expectOrReturn(TokenKind::Gt,
                 err::expected().at(nextToken.location).with("'>'"));
  eatNextToken(); // eat '>'

  return std::make_unique<ast::TypeSpecifier>(location, std::move(type),
                                              std::move(trait));
}

// <pathExpr>
//  ::= (<typeSpecifier> '::')? <declRefExpr> ('::' <declRefExpr>)*
std::unique_ptr<ast::PathExpr> Parser::parsePathExpr() {
  std::unique_ptr<ast::TypeSpecifier> typeSpecifier = nullptr;
  std::vector<std::unique_ptr<ast::DeclRefExpr>> fragments;

  if (nextToken.kind == TokenKind::At) {
    typeSpecifier = parseTypeSpecifier();
    if (!typeSpecifier)
      return nullptr;

    expectOrReturn(TokenKind::ColonColon,
                   err::expected().at(nextToken.location).with("'::'"));
    eatNextToken(); // eat '::'
  }

  if (!fragments.emplace_back(parseDeclRefExpr()))
    return nullptr;

  while (nextToken.kind == TokenKind::ColonColon) {
    eatNextToken(); // eat '::'

    if (!fragments.emplace_back(parseDeclRefExpr()))
      return nullptr;
  }

  return std::make_unique<ast::PathExpr>(std::move(typeSpecifier),
                                         std::move(fragments));
}

std::unique_ptr<ast::DeclRefExpr> Parser::parseDeclRefExpr() {
  SourceLocation location = nextToken.location;

  if (nextToken.kind != TokenKind::Identifier &&
      nextToken.kind != TokenKind::KwSelf)
    return err::expected2()
        .at(nextToken.location)
        .with("identifier")
        .with("'Self'")
        .report(reporter);

  assert(nextToken.value && "identifier without value");
  std::string identifier = *nextToken.value;
  eatNextToken(); // eat identifier or 'Self'

  std::unique_ptr<ast::TypeArgumentList> typeArgsList = nullptr;
  if (nextToken.kind == TokenKind::At) {
    varOrReturn(parsedTypeArgList, parseTypeArgumentList());
    typeArgsList = std::move(parsedTypeArgList);
  }

  return std::make_unique<ast::DeclRefExpr>(location, std::move(identifier),
                                            std::move(typeArgsList));
}

// <gcExpr>
//  ::= 'gc' 'mut'? <expr>
std::unique_ptr<ast::GCExpr> Parser::parseGCExpr() {
  SourceLocation location = nextToken.location;
  eatNextToken(); // eat 'gc'

  bool isMut = nextToken.kind == TokenKind::KwMut;
  if (isMut)
    eatNextToken(); // eat 'mut'

  varOrReturn(expr, parseExpr());

  return std::make_unique<ast::GCExpr>(location, std::move(expr), isMut);
}

// <lambda>
//  ::= '->' <lambdaParamList>? <block>
std::unique_ptr<ast::LambdaExpr> Parser::parseLambdaExpr() {
  SourceLocation location = nextToken.location;
  eatNextToken(); // eat '->'

  auto parameterList = std::vector<std::unique_ptr<ast::ParamDecl>>();
  std::unique_ptr<ast::Type> type;

  if (nextToken.kind == TokenKind::Lpar) {
    eatNextToken(); // eat '('

    while (nextToken.kind != TokenKind::Rpar) {
      varOrReturn(param, withRestrictions<ast::ParamDecl>(
                             ParamWithoutTypeAllowed, &Parser::parseParamDecl));
      parameterList.emplace_back(std::move(param));

      if (nextToken.kind != TokenKind::Comma)
        break;
      eatNextToken(); // eat ','
    }

    expectOrReturn(TokenKind::Rpar,
                   err::expected().at(nextToken.location).with("')'"));
    eatNextToken(); // eat ')'

    if (nextToken.kind == TokenKind::Colon) {
      eatNextToken(); // eat :

      type = parseType();
      if (!type)
        return nullptr;
    }
  } else if (nextToken.kind != TokenKind::Lbrace) {
    return err::expected2()
        .at(nextToken.location)
        .with("'('")
        .with("'{'")
        .report(reporter);
  }

  expectOrReturn(TokenKind::Lbrace,
                 err::expected().at(nextToken.location).with("'{'"));
  varOrReturn(block, withNoRestrictions<ast::Block>(&Parser::parseBlock));

  return std::make_unique<ast::LambdaExpr>(location, std::move(parameterList),
                                           std::move(type), std::move(block));
}

std::unique_ptr<ast::TypeArgumentList> Parser::parseTypeArgumentList() {
  expectOrReturn(TokenKind::At,
                 err::expected().at(nextToken.location).with("'@'"));

  SourceLocation location = nextToken.location;
  eatNextToken(); // eat '@'

  varOrReturn(args, parseTypeList());

  return std::make_unique<ast::TypeArgumentList>(location, std::move(*args));
}

// <traitConformanceDecl>
//  ::= ':' <userDefinedType> ('&' <userDefinedType>)*
std::unique_ptr<ast::TraitConformance> Parser::parseTraitConformance() {
  SourceLocation location = nextToken.location;
  eatNextToken(); // eat ':'

  std::vector<std::unique_ptr<ast::UserDefinedType>> traits;

  while (true) {
    expectOrReturn(TokenKind::Identifier,
                   err::expected().at(nextToken.location).with("identifier"));

    varOrReturn(trait, parseUserDefinedType());
    traits.emplace_back(std::move(trait));

    if (nextToken.kind != TokenKind::Amp)
      break;

    eatNextToken(); // eat '&'
  }

  return std::make_unique<ast::TraitConformance>(location, std::move(traits));
}

template <typename T>
std::unique_ptr<std::vector<std::unique_ptr<T>>>
Parser::parseListWithTrailingComma(
    std::function<std::unique_ptr<T>(Parser &)> parser,
    TokenKind closingToken) {
  auto list = std::make_unique<std::vector<std::unique_ptr<T>>>();

  while (nextToken.kind != closingToken) {
    varOrReturn(init, withNoRestrictions(parser));
    list->emplace_back(std::move(init));

    if (nextToken.kind != TokenKind::Comma)
      break;
    eatNextToken(); // eat ','
  }

  return list;
}

// <type>
//  ::= <builtinType>
//  |   <userDefinedDeclInstance>
//  |   <functionType>
//  |   <pointerType>
//  |   <anyType>
//
// <builtinType>
//  ::= 'number'
//  |   'bool'
//  |   'unit'
//  |   'Self'
//
// <userDefinedDeclInstance>
//  ::= <identifier> <typeList>?
//
// <functionType>
//  ::= '(' <argumentType> (',' <argumentType>)* ','? ')' -> type
//
// <argumentType>
//  ::= <refModifier>? <type>
//
// <pointerType>
//  ::= '*' 'mut'? <type>
//
// <anyType>
//  ::= 'any' <userDefinedType>
std::unique_ptr<ast::Type> Parser::parseType() {
  SourceLocation location = nextToken.location;
  TokenKind kind = nextToken.kind;

  if (kind == TokenKind::KwNumber) {
    eatNextToken(); // eat 'number'
    return std::make_unique<ast::BuiltinType>(location,
                                              ast::BuiltinType::Kind::Number);
  }
